--- a/jsqlexpress/src/main/resources/jdbc.properties
+++ b/jsqlexpress/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 database.driver=org.postgresql.Driver
-database.url=jdbc:postgresql://127.0.0.1:5432/myapp
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/jsqlexpress
 database.username=postgres
-database.password=hydra
+database.password=123456
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
