init library sql driver

--- a/jsqlexpress/src/main/resources/jdbc.properties
+++ b/jsqlexpress/src/main/resources/jdbc.properties
@@ -1,7 +1,27 @@
-database.driver=org.postgresql.Driver
-database.url=jdbc\:postgresql\://127.0.0.1\:5432/jsqlexpress
-database.username=postgres
-database.password=123456
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# *****config postgress *************
+#database.driver=org.postgresql.Driver
+#database.url=jdbc\:postgresql\://127.0.0.1\:5432/jsqlexpress
+#database.username=postgres
+#database.password=123456
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#hibernate.show_sql=false
+#hibernate.hbm2ddl.auto=update
+
+# **** config sql server ***********
+#database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#database.url=jdbc:sqlserver://localhost:1433;databaseName=jsqlexpress;
+#database.username=sa
+#database.password=Mhdanh123
+#hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#hibernate.show_sql=false
+#hibernate.hbm2ddl.auto=update
+
+
+# *** connect sql express *********
+database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+database.url=.\SQLEXPRESS;AttachDbFilename=D:\jsqlexpress\jsqlexpress.mdf;Integrated Security=True;User Instance=True
+database.username=sa
+database.password=Mhdanh123
+hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
