--- a/jsqlexpress/pom.xml
+++ b/jsqlexpress/pom.xml
@@ -16,10 +16,12 @@
 		<hibernate.version>4.3.5.Final</hibernate.version>
 		<jdbc.postgres.version>9.1-901.jdbc4</jdbc.postgres.version>
 		<log4j.version>1.2.17</log4j.version>
+		<sqlite.version>3.8.7</sqlite.version>
 	</properties>
-	
+
 
 	<dependencies>
+		<!-- spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
@@ -36,24 +38,33 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<!-- hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		
+
 		<!-- log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		
+		<!-- driver jdbc postgress -->
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${jdbc.postgres.version}</version>
 		</dependency>
+
+		<!-- driver sqlite -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.186</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
