--- a/jsqlexpress/src/main/resources/jdbc.properties
+++ b/jsqlexpress/src/main/resources/jdbc.properties
@@ -17,11 +17,23 @@
 #hibernate.hbm2ddl.auto=update
 
 
-# *** connect sql express *********
-database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.url=.\SQLEXPRESS;AttachDbFilename=D:\jsqlexpress\jsqlexpress.mdf;Integrated Security=True;User Instance=True
+# *** connect sql express not successful*********
+#database.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#database.url=.\SQLEXPRESS;AttachDbFilename=D:\jsqlexpress\jsqlexpress.mdf;Integrated Security=True;User Instance=True
+#database.username=sa
+#database.password=Mhdanh123
+#hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+#hibernate.show_sql=false
+#hibernate.hbm2ddl.auto=update
+
+# ****connect h2 ****************
+database.driver=org.h2.Driver
+database.url=jdbc:h2:file:D:/h2/jsqlexpress
 database.username=sa
-database.password=Mhdanh123
-hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+database.password=
+hibernate.dialect= org.hibernate.dialect.H2Dialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
+
+
+
